# demo-auto-segmentation

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
