[project]
name = "streamlit-labeller"
version = "0.1.0"
description = "A beautiful Streamlit application for image labeling with bounding box, segmentation, and classification tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit==1.40.0",
    "pillow>=8.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "streamlit-drawable-canvas",
    "opencv-python>=4.5.0",
]

# Optional dependencies for development
[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
]
